--- a/style.css
+++ b/style.css
@@ -2,13 +2,15 @@ body {
 	font-family: montserrat;
 	margin: 0;
 	overflow-x: hidden;
+	background: url("img/sa-wallpaper.jpg");
+	background-size: cover;
 }
 
 .output-container {
 	width: 100vw;
 	height: 100vh;
 	background-color: black;
-	opacity: .95;
+	opacity: .9;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -95,4 +97,12 @@ input[name="input-3"]:focus + .input-underline {
 .end-slowly-2 {
 	transition-duration: .1s;
 	transition-timing-function: ease-out;
+}
+
+.author {
+	font-size: .75em;
+	color: white;
+	position: absolute;
+	right: 10px;
+	bottom: 10px;
 }
