--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
 	margin: 0;
 	overflow-x: hidden;
 	background: url("img/sa-wallpaper.jpg");
+	background-position: center center;
 	background-size: cover;
 }
 
